@@ -1,3 +1,7 @@
+2006-05-04 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b21
+
+ * Fix: Frame around movies in photo view was broken.
+
 2006-04-04 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b20
 
  * Fix: Use gTranslate instead of _( in albums.php, view_album.php and view_photo.php
